[package]
name = "nomcup"
description = "Library to parse PKGBUILD files used by pacman the package manager"
version = "0.1.0"
licence = "GPL-3.0-or-later"
license-file = "LICENSE"
repository = "https://github.com/ejiek/nomcup/"
readme = "README.md"
authors = ["Vlad Petrov <ejiek@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
