[package]
name = "nomcup"
description = "Library to parse PKGBUILD files used by pacman the package manager"
version = "0.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/ejiek/nomcup/"
readme = ".github/README.md"
authors = ["Vlad Petrov <ejiek@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
